k8s/automation/n8n/templates/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external.mfin.app/managed: "true"
  name: external-n8n
spec:
  hostnames:
    - webhooks.mfin.app
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: envoy-gateway
  rules:
    - matches:
        - path:
            type: RegularExpression
            value: "/(.*)"
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: "/webhook/external/"
      backendRefs:
        - name: n8n
          port: 80
